# anonymous-credentials-agent-demo

./: .gitignore  README.md
act-mcp-server/: Cargo.toml
act-mcp-server/src/: act.rs  main.rs
client/: README.md  index.html  package-lock.json  package.json  wrangler.toml
client/rust/: Cargo.toml
client/rust/src/: lib.rs
client/src/: App.tsx  index.css
issuer/: Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
issuer/.cargo/: config.toml
issuer/keygen/: Cargo.toml  README.md
issuer/keygen/src/: main.rs
issuer/public/: index.html
issuer/src/: lib.rs
