[package]
name = "act-mcp-server"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Thibault Meunier <thibault@cloudflare.com>"]
license = "Apache-2.0"
description = "PoC MCP server with tools for Anonymous Credit Tokens"
repository = "https://github.com/cloudflareresearch/anonymous-credentials-agent-demo"

[[bin]]
name = "act-mcp-server"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.6.0", git = "https://github.com/modelcontextprotocol/rust-sdk", features = [
    "server",
    "macros",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
futures = "0.3"
rand = { version = "0.9", features = ["std"] }
axum = { version = "0.8", features = ["macros"] }
schemars = "1.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
serde_urlencoded = "0.7"
askama = { version = "0.14" }
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1" }
hyper-util = { version = "0", features = ["server"] }
tokio-util = { version = "0.7" }
anonymous-credit-tokens = { git = "https://github.com/armfazh/anonymous-credit-tokens", branch = "wba-cf" }
rand_core = "0.6.4"
curve25519-dalek = "4.1.3"

[dev-dependencies]
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["codec"] }
